--- a/templates/page_pups-expected.html
+++ b/templates/page_pups-expected.html
@@ -34,6 +34,7 @@
 
             <!-- In Drupal main-menu -->
             <nav class="navigation__nav">
+
               <div class="navigation__items">
                 <ul class="navigation__list">
                   <li class="navigation__item">
@@ -68,7 +69,7 @@
 
               <div class="navigation__footer">
                 <a href="#" class="navigation__footer-link">Privacy</a>
-              </div>
+              </div> 
 
             </nav>
 
@@ -108,37 +109,27 @@
 
   </header>
 
-  <div class="container">
+  <section class="pups-expected-content">
 
-    <section class="pups-expected panel-wide">
-
-      <div class="panel-wide__img">
-        <img src="../images/for_html/pups.jpg" alt="Pups">
+    <div class="pups-expected-content__title">
+      <div class="heading heading-second heading-second--taller">
+        Wordt verwacht
       </div>
+    </div>
 
-      <div class="panel-wide__wrapper">
+    <div class="pups-expected-content__img">
+      <img src="../images/for_html/ben.jpg" alt="Pups">
+      <img src="../images/for_html/mystic-v.jpg" alt="Pups">
+    </div>
 
-        <div class="pups-expected__title">
-          <div class="heading">
-            Pups verwacht
-          </div>
-        </div>
+    <div class="pups-expected-content__body">
+      De Bullensteeg Pepper en Bandit From Fortunebulls
+    </div>
 
-        <div class="pups-expected__teaser-content">
-          De Bullensteeg Pepper en Bandit From Fortunebulls
-        </div>
 
-        <div class="read-more u-flex-align-right">
-          <a href="page_pups-expected.html" class="read-more__link">Lees meer</a>
-        </div>
+    <div class="pups-expected-content__bcg bcg"></div>
 
-      </div>
-
-      <div class="panel-wide__bcg"></div>
-
-    </section>
-
-  </div>
+  </section>
 
   <section class="our-pups">
 
