--- a/sass/01-base/_typography.scss
+++ b/sass/01-base/_typography.scss
@@ -5,7 +5,7 @@
 body {
   font-family: $font-family;
   font-weight: 400;
-  font-size: 1.8rem;
+  font-size: $base-font-size;
   color: $black_gunmetal;
   line-height: 2.5rem;
 }
