--- a/sass/04-components/_panels.scss
+++ b/sass/04-components/_panels.scss
@@ -74,7 +74,6 @@
   }
 
   &__bcg {
-    box-shadow: $panel-shadow;
     grid-column: 1 / -1;
     grid-row: 1 / 3;
 
@@ -83,6 +82,13 @@
       grid-row: 2 / -1;
     }
 
+    box-shadow: $panel-shadow;
     background: $white;
   }
+}
+
+.bcg {
+  box-shadow: $panel-shadow;
+  background: $white;
+  z-index: -1;
 }
