--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,900" rel="stylesheet">
     <link rel="stylesheet" href="../dist/css/styles.css">
     <title>De Bullensteeg</title>
 </head>
@@ -34,6 +34,7 @@
 
                         <!-- In Drupal main-menu     -->
                         <nav class="navigation__nav">
+
                             <div class="navigation__items">
                                 <ul class="navigation__list">
                                     <li class="navigation__item">
@@ -56,9 +57,20 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="navigation__site-name">
-                                Bullensteeg
+
+                            <div class="navigation__branding">
+                                <div class="navigation__site-avatar">
+                                    <img src="../images/for_html/marleen.jpg" alt="">
+                                </div>
+                                <div class="navigation__site-name">
+                                    De Bullensteeg
+                                </div>
                             </div>
+
+                            <div class="navigation__footer">
+                                <a href="#" class="navigation__footer-link">Privacy</a>
+                            </div>
+
                         </nav>
 
                         <!-- in Drupal footer-menu -->
@@ -187,7 +199,7 @@
                 </div>
 
                 <div class="read-more u-flex-align-right">
-                    <a href="page_pups.html" class="read-more__link">Lees meer</a>
+                    <a href="page_pups-expected.html" class="read-more__link">Lees meer</a>
                 </div>
 
             </div>
