--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
                                         <a href="#" class="navigation__link">Home</a>
                                     </li>
                                     <li class="navigation__item">
-                                        <a href="#" class="navigation__link">Teven</a>
+                                        <a href="page_our-pets.html" class="navigation__link">Teven</a>
                                     </li>
                                     <li class="navigation__item">
                                         <a href="#" class="navigation__link">Reuen</a>
@@ -81,7 +81,7 @@
                                         <a href="#" class="navigation__link--desktop">Home</a>
                                     </li>
                                     <li class="navigation__item--desktop">
-                                        <a href="#" class="navigation__link--desktop">Teven</a>
+                                        <a href="page_our-pets.html" class="navigation__link--desktop">Teven</a>
                                     </li>
                                     <li class="navigation__item--desktop">
                                         <a href="#" class="navigation__link--desktop">Reuen</a>
@@ -178,36 +178,37 @@
 
     </section>
 
+
+
+    <section class="pups-expected panel-wide">
+
+        <div class="panel-wide__img">
+            <img src="../images/for_html/pups.jpg" alt="Pups">
+        </div>
+
+        <div class="panel-wide__wrapper">
+
+            <div class="pups-expected__title">
+                <div class="heading">
+                    Pups verwacht
+                </div>
+            </div>
+
+            <div class="pups-expected__teaser-content">
+                De Bullensteeg Pepper en Bandit From Fortunebulls
+            </div>
+
+            <div class="read-more u-flex-align-right">
+                <a href="page_pups-expected.html" class="read-more__link">Lees meer</a>
+            </div>
+
+        </div>
+
+        <div class="panel-wide__bcg"></div>
+
+    </section>
+
     <div class="container">
-
-        <section class="pups-expected panel-wide">
-
-            <div class="panel-wide__img">
-                <img src="../images/for_html/pups.jpg" alt="Pups">
-            </div>
-
-            <div class="panel-wide__wrapper">
-
-                <div class="pups-expected__title">
-                    <div class="heading">
-                        Pups verwacht
-                    </div>
-                </div>
-
-                <div class="pups-expected__teaser-content">
-                    De Bullensteeg Pepper en Bandit From Fortunebulls
-                </div>
-
-                <div class="read-more u-flex-align-right">
-                    <a href="page_pups-expected.html" class="read-more__link">Lees meer</a>
-                </div>
-
-            </div>
-
-            <div class="panel-wide__bcg"></div>
-
-        </section>
-
         <section class="our-pets u-negative-margin-top">
 
             <div class="our-pets__teven panel">
@@ -219,7 +220,7 @@
                     <span class="site__name site__name--small u-margin-bottom">BULLENSTEEG</span>
                     <h2 class="heading heading-second">Onze Teven</h2>
                     <div class="read-more u-flex-align-right">
-                        <a href="#" class="read-more__link">Lees meer</a>
+                        <a href="page_our-pets.html" class="read-more__link">Lees meer</a>
                     </div>
                 </div>
 
