--- a/templates/page_pups-expected.html
+++ b/templates/page_pups-expected.html
@@ -41,7 +41,7 @@
                     <a href="index.html" class="navigation__link">Home</a>
                   </li>
                   <li class="navigation__item">
-                    <a href="#" class="navigation__link">Teven</a>
+                    <a href="page_our-pets.html" class="navigation__link">Teven</a>
                   </li>
                   <li class="navigation__item">
                     <a href="#" class="navigation__link">Reuen</a>
@@ -81,7 +81,7 @@
                     <a href="index.html" class="navigation__link--desktop">Home</a>
                   </li>
                   <li class="navigation__item--desktop">
-                    <a href="#" class="navigation__link--desktop">Teven</a>
+                    <a href="page_our-pets.html" class="navigation__link--desktop">Teven</a>
                   </li>
                   <li class="navigation__item--desktop">
                     <a href="#" class="navigation__link--desktop">Reuen</a>
