--- a/templates/node-pet.html
+++ b/templates/node-pet.html
@@ -113,121 +113,37 @@
         <div class="container">
 
             <div class="our-pets__container">
-                <div class="heading heading-second heading-second--taller">Teven</div>
 
-                <section class="section-our-pets">
+                <div class="node__pet-panel">
 
-                    <div class="pet-panel">            
-
-                        <div class="pet-panel__image">
-                            <img src="../images/for_html/teef-izora.jpg" alt="">
-                        </div>
-
-                        <div class="pet-panel__body">
-                            <div class="pet-panel__body-name">
-                                Izora d'allegra Nobile
-                            </div>
-                            <div class="pet-panel__body-born-on">
-                                Geboren 02/03/2009
-                            </div>
-                            <div class="pet-panel__body-readmore">
-                                <a href="node-pet.html" class="read-more__link">Lees meer</a>
-                            </div>
-                        </div>
-
-                        <div class="pet-panel__bcg bcg"></div>
+                    <div class="node__pet-panel__image">
+                        <img src="../images/for_html/teef-izora.jpg" alt="">
                     </div>
-                    <!-- </div> end pet-panel -->
 
-                    <div class="pet-panel">
-
-                        <div class="pet-panel__image">
-                            <img src="../images/for_html/teef-lollypop.jpg" alt="">
+                    <div class="node__pet-panel__body">
+                        <div class="pet-panel__body-name">
+                            Izora d'allegra Nobile
+                        </div>
+                        <div class="pet-panel__body-born-on">
+                            Geboren 02/03/2009
+                        </div>
+                        <div class="showresults">
+                            <div class="showresults__title heading-third heading">
+                                Showresultaten
+                            </div>
+                            <div class="showresults__sub-title">
+                                Kampioensclubmatch Hbc - 7 april 2013
+                            </div>
+                            <div class="showresults__body">
+                              Puppy klasse. Veel belovend, keurmeester van Raamsdonk V.A. (Be)
+                            </div>
                         </div>
 
-                        <div class="pet-panel__body">
-                            <div class="pet-panel__body-name">
-                                Lollypop de Longcourville
-                            </div>
-                            <div class="pet-panel__body-born-on">
-                                Geboren 17/08/2012
-                            </div>
-                            <div class="pet-panel__body-readmore">
-                                <a href="#" class="read-more__link">Lees meer</a>
-                            </div>
-                        </div>
-
-                        <div class="pet-panel__bcg bcg"></div>
                     </div>
-                    <!-- </div> end pet-panel -->
 
-                    <div class="pet-panel">
-
-                        <div class="pet-panel__image">
-                            <img src="../images/for_html/teef-pepper.jpg" alt="">
-                        </div>
-
-                        <div class="pet-panel__body">
-                            <div class="pet-panel__body-name">
-                                De Bullensteeg Pepper
-                            </div>
-                            <div class="pet-panel__body-born-on">
-                                Geboren 24/02/2016
-                            </div>
-                            <div class="pet-panel__body-readmore">
-                                <a href="#" class="read-more__link">Lees meer</a>
-                            </div>
-                        </div>
-
-                        <div class="pet-panel__bcg bcg"></div>
-                    </div>
-                    <!-- </div> end pet-panel -->
-
-                    <div class="pet-panel">
-
-                        <div class="pet-panel__image">
-                            <img src="../images/for_html/teef-queen.jpg" alt="">
-                        </div>
-
-                        <div class="pet-panel__body">
-                            <div class="pet-panel__body-name">
-                                Queen Rebel de Longcourville
-                            </div>
-                            <div class="pet-panel__body-born-on">
-                                Geboren 04/11/2017
-                            </div>
-                            <div class="pet-panel__body-readmore">
-                                <a href="#" class="read-more__link">Lees meer</a>
-                            </div>
-                        </div>
-
-                        <div class="pet-panel__bcg bcg"></div>
-                    </div>
-                    <!-- </div> end pet-panel -->
-
-                    <div class="pet-panel">
-
-                        <div class="pet-panel__image">
-                            <img src="../images/for_html/teef-izora.jpg" alt="">
-                        </div>
-
-                        <div class="pet-panel__body">
-                            <div class="pet-panel__body-name">
-                                Izora d'allegra Nobile
-                            </div>
-                            <div class="pet-panel__body-born-on">
-                                Geboren 02/03/2009
-                            </div>
-                            <div class="pet-panel__body-readmore">
-                                <a href="#" class="read-more__link">Lees meer</a>
-                            </div>
-                        </div>
-
-                        <div class="pet-panel__bcg bcg"></div>
-                    </div>
-                    <!-- </div> end pet-panel -->
-
-                </section>
+                    <div class="node__pet-panel__bcg bcg"></div>
+                </div>
+                <!-- </div> end pet-panel -->
             </div>
 
         </div>
