theme to Drupal and start about-me region

--- a/templates/layout/page--front.html.twig
+++ b/templates/layout/page--front.html.twig
@@ -6,6 +6,7 @@
 
                 <div class="site__name heading">
                     De Bullensteeg
+                    {# {{ site_name }} #}
                 </div>
 
                 <div class="header__menu">
