--- a/templates/partials/front-page/aboutus.html.twig
+++ b/templates/partials/front-page/aboutus.html.twig
@@ -3,26 +3,9 @@
 #}
 
 <section class="aboutus">
-        <div class="aboutus__img">
-            <img src="{{ base_path ~ directory }}/images/about-us.JPG" alt="Bullensteeg Marleen">
-        </div>
 
-        <div class="aboutus__text">
-            <h2 class="heading heading-second heading-second--taller">
-                Franse Bulldoggen, mijn leven.
-            </h2>
-            <p>
-                Mijn naam is Halleng Marleen en de Franse Bulldog is in mijn leven gekomen in 2007 tijdens een periode dat ik ziek geworden
-                ben. Ik had gezelschap nodig en daar is dit ras zeer geschikt voor.
-            </p>
-            <p>
-                Ondertussen zijn we vele jaren later en zijn er een aantal bulldogjes bij ons gezin komen wonen.
-            </p>
-            <div class="read-more">
-                <a class="read-more__link" href="#">Lees meer</a>
-            </div>
-        </div>
+  {{ page.aboutus }}
 
-        <div class="aboutus__bcg"></div>
+  <div class="aboutus__bcg"></div>
 
-    </section>
+</section>
