--- a/templates/partials/shared/navigation.html.twig
+++ b/templates/partials/shared/navigation.html.twig
@@ -35,7 +35,7 @@
 
                               <div class="navigation__branding">
                                   <div class="navigation__site-avatar">
-                                      <img src="../images/for_html/marleen.jpg" alt="">
+                                      <img src="{{ base_path ~ directory }}/images/marleen.jpg" alt="">
                                   </div>
                                   <div class="navigation__site-name">
                                       De Bullensteeg
