--- a/templates/partials/front-page/header-front.html.twig
+++ b/templates/partials/front-page/header-front.html.twig
@@ -1,32 +1,36 @@
+{#
+/**
+ * Header region on the front-page
+*/
+#}
+
 <div class="header__img">
-                    <img src="{{ base_path ~ directory }}/images/front-img.jpg" alt="Bullensteeg groepsfoto">
-                </div>
+    <img src="{{ base_path ~ directory }}/images/front-img.jpg" alt="Bullensteeg groepsfoto">
+</div>
 
-                <div class="header__slogan">
-                    <h1 class="heading heading-first">
-                        Franse bulldoggen,
-                        <br> grote liefde,
-                        <br> passie en hobby.
-                    </h1>
-                </div>
+<div class="header__slogan">
+    <h1 class="heading-first">
+        Franse bulldoggen,<br> grote liefde,<br> passie en hobby.
+    </h1>
+</div>
 
-                <div class="header__cta">
-                    <a href="tel:011123456" class="btn btn--green">Contacteer mij.</a>
-                </div>
+<div class="header__cta">
+    <a href="tel:011123456" class="btn btn--green">Contacteer mij.</a>
+</div>
 
-                <div class="header__cta--desktop">
-                    <a href="#" class="btn btn--green btn--more-padding">Contacteer mij via mail.</a>
-                </div>
+ <div class="header__cta--desktop">
+    <a href="#" class="btn btn--green btn--more-padding">Contacteer mij via mail.</a>
+</div>
 
-                <div class="header__slogan-sub">
-                    <p>
-                        “Mijn honden gezondheid en karakter als prioriteit”
-                    </p>
-                </div>
+<div class="header__slogan-sub">
+    <p>“
+    {# {{ site_slogan }} #}
+    {{ 'Mijn honden gezondheid en karakter als prioriteit' }}
+    ”</p>
+</div>
 
-                <div class="contact-details contact-details--green contact-details--full-width">
-                    Marleen Halleng
-                    <br> marleenhalleng@gmail.com
-                    <br> Tel: (+32) 497 239 743 #1
-                </div>
-            </div>
+<div class="contact-details contact-details--green contact-details--full-width">
+    Marleen Halleng
+    <br> marleenhalleng@gmail.com
+    <br> Tel: (+32) 497 239 743
+</div>
