the about-me region on home-page Drupal ready

--- a/templates/partials/front-page/aboutus.html.twig
+++ b/templates/partials/front-page/aboutus.html.twig
@@ -1,11 +1,12 @@
 {# 
-
+/**
+ * The about region on the homepage
+ * The CSS-Grid wrapper .aboutus on node--aboutme--teaser.html.twig
+ */
 #}
 
-<section class="aboutus">
+<section class="aboutus-region">
 
   {{ page.aboutus }}
-
-  <div class="aboutus__bcg"></div>
 
 </section>
