--- a/templates/partials/front-page/header-front.html.twig
+++ b/templates/partials/front-page/header-front.html.twig
@@ -23,10 +23,8 @@
 </div>
 
 <div class="header__slogan-sub">
-    <p>“
-    {# {{ site_slogan }} #}
-    {{ 'Mijn honden gezondheid en karakter als prioriteit' }}
-    ”</p>
+{#  the site name and slogan out of configuration via .theme file #}
+    <p>“{{ site_slogan }}”</p>
 </div>
 
 <div class="contact-details contact-details--green contact-details--full-width">
