a few litle things

--- a/sass/04-components/_panels.scss
+++ b/sass/04-components/_panels.scss
@@ -124,7 +124,7 @@
       grid-column: 3 / -1;
       grid-row: 2 / -1;
 
-      padding: 2rem 3rem 8rem;
+      padding: 7rem;
       align-self: center;
     }
 
