--- a/templates/partials/shared/navigation.html.twig
+++ b/templates/partials/shared/navigation.html.twig
@@ -13,7 +13,7 @@
                               <div class="navigation__items">
                                   <ul class="navigation__list">
                                       <li class="navigation__item">
-                                          <a href="#" class="navigation__link">Home</a>
+                                          <a href="{{ path('<front>') }}" class="navigation__link">Home</a>
                                       </li>
                                       <li class="navigation__item">
                                           <a href="page_our-pets.html" class="navigation__link">Teven</a>
@@ -48,12 +48,11 @@
 
                           </nav>
 
-                        <!-- in Drupal footer-menu -->
                         <nav class="navigation__nav--desktop">
                             <div class="navigation__items--desktop">
                                 <ul class="navigation__list">
                                     <li class="navigation__item--desktop">
-                                        <a href="#" class="navigation__link--desktop">Home</a>
+                                        <a href="{{ path('<front>') }}" class="navigation__link--desktop">Home</a>
                                     </li>
                                     <li class="navigation__item--desktop">
                                         <a href="page_our-pets.html" class="navigation__link--desktop">Teven</a>
