--- a/templates/partials/shared/navigation.html.twig
+++ b/templates/partials/shared/navigation.html.twig
@@ -22,7 +22,7 @@
                                           <a href="#" class="navigation__link">Reuen</a>
                                       </li>
                                       <li class="navigation__item">
-                                          <a href="page_pups.html" class="navigation__link">Pups</a>
+                                          <a href="{{base_path}}onze-pups" class="navigation__link">Pups</a>
                                       </li>
                                       <li class="navigation__item">
                                           <a href="#" class="navigation__link">Foto's</a>
@@ -61,7 +61,7 @@
                                         <a href="#" class="navigation__link--desktop">Reuen</a>
                                     </li>
                                     <li class="navigation__item--desktop">
-                                        <a href="page_pups.html" class="navigation__link--desktop">Pups</a>
+                                        <a href="{{base_path}}onze-pups" class="navigation__link--desktop">Pups</a>
                                     </li>
                                     <li class="navigation__item--desktop">
                                         <a href="#" class="navigation__link--desktop">Foto's</a>
