pups-expected full-content done, teaser needs work

--- a/templates/partials/front-page/pups-expected.html.twig
+++ b/templates/partials/front-page/pups-expected.html.twig
@@ -1,6 +1,9 @@
 {# #}
 
-<section class="pups-expected panel-wide">
+{{ page.pupsexpected }}
+
+
+{# <section class="pups-expected panel-wide">
 
         <div class="panel-wide__img">
             <img src="{{ base_path ~ directory }}/images/pups.jpg" alt="Bullensteeg Pups">
@@ -26,4 +29,4 @@
 
         <div class="panel-wide__bcg"></div>
 
-    </section>
+    </section> #}
