--- a/templates/content/node--pups_expected--teaser.html.twig
+++ b/templates/content/node--pups_expected--teaser.html.twig
@@ -10,7 +10,7 @@
     'node',
     'pups-expected',
     'panel-wide',
-    'pups-expected-content',
+    'pups-expected',
     'node--type-' ~ node.bundle|clean_class,
     node.isPromoted() ? 'node--promoted',
     node.isSticky() ? 'node--sticky',
@@ -18,6 +18,9 @@
     view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
   ]
 %}
+
+{% set bodytext = content.body|render|striptags %}
+
 {{ attach_library('classy/node') }}
 <article{{ attributes.addClass(classes) }}>
   <div class="panel-wide__img">
@@ -33,7 +36,7 @@
     </div>
 
     <div class="pups-expected__teaser-content">
-      {{ content.body }}
+      {{ bodytext|length > 100 ? bodytext|slice(0, 100) ~ '...' : bodytext }}
     </div>
     
     <div class="read-more u-flex-align-right">
