begin our-pets teaser ok

--- a/templates/partials/front-page/our-pets.html.twig
+++ b/templates/partials/front-page/our-pets.html.twig
@@ -11,7 +11,7 @@
                     <span class="site__name site__name--small u-margin-bottom">BULLENSTEEG</span>
                     <h2 class="heading heading-second">Onze Teven</h2>
                     <div class="read-more u-flex-align-right">
-                        <a href="page_our-pets.html" class="read-more__link">Lees meer</a>
+                        <a href="{{base_path}}onze-teven" class="read-more__link">Lees meer</a>
                     </div>
                 </div>
 
@@ -25,7 +25,7 @@
                     <span class="site__name site__name--small u-margin-bottom">BULLENSTEEG</span>
                     <h2 class="heading heading-second">Onze Reuen</h2>
                     <div class="read-more u-flex-align-right">
-                        <a href="#" class="read-more__link">Lees meer</a>
+                        <a href="{{base_path}}onze-reuen" class="read-more__link">Lees meer</a>
                     </div>
                 </div>
 
