--- a/templates/partials/shared/navigation.html.twig
+++ b/templates/partials/shared/navigation.html.twig
@@ -16,10 +16,10 @@
                                           <a href="{{ path('<front>') }}" class="navigation__link">Home</a>
                                       </li>
                                       <li class="navigation__item">
-                                          <a href="page_our-pets.html" class="navigation__link">Teven</a>
+                                          <a href="{{base_path}}onze-teven" class="navigation__link">Teven</a>
                                       </li>
                                       <li class="navigation__item">
-                                          <a href="#" class="navigation__link">Reuen</a>
+                                          <a href="{{base_path}}onze-reuen" class="navigation__link">Reuen</a>
                                       </li>
                                       <li class="navigation__item">
                                           <a href="{{base_path}}onze-pups" class="navigation__link">Pups</a>
@@ -55,10 +55,10 @@
                                         <a href="{{ path('<front>') }}" class="navigation__link--desktop">Home</a>
                                     </li>
                                     <li class="navigation__item--desktop">
-                                        <a href="page_our-pets.html" class="navigation__link--desktop">Teven</a>
+                                        <a href="{{base_path}}onze-teven" class="navigation__link--desktop">Teven</a>
                                     </li>
                                     <li class="navigation__item--desktop">
-                                        <a href="#" class="navigation__link--desktop">Reuen</a>
+                                        <a href="{{base_path}}onze-reuen" class="navigation__link--desktop">Reuen</a>
                                     </li>
                                     <li class="navigation__item--desktop">
                                         <a href="{{base_path}}onze-pups" class="navigation__link--desktop">Pups</a>
