node our-pets with mom and dad name

--- a/sass/04-components/_panels.scss
+++ b/sass/04-components/_panels.scss
@@ -4,7 +4,7 @@
 
 .panel {
   margin: 0 auto;
-  width: 30rem;
+  max-width: 35rem;
   background: $white;
   box-shadow: $panel-shadow;
   z-index: 1;
