--- a/sass/01-base/_utilities.scss
+++ b/sass/01-base/_utilities.scss
@@ -22,6 +22,14 @@
   margin-bottom: 2rem;
 }
 
+.u-margin-right-less {
+  margin-right: 1rem;
+}
+
+.u-margin-right {
+  margin-right: 2rem;
+}
+
 .u-full-width {
   width: 100%;
 }
