--- a/sass/02-layout/_page_our-pets.scss
+++ b/sass/02-layout/_page_our-pets.scss
@@ -4,8 +4,10 @@
 
 .our-pets {
   &__container {
-    margin: 6rem 0 8rem;
+    margin: 6rem auto 8rem;
     min-height: 37vw;
+    max-width: 50vw;
+    min-width: 70vw;
   }
 }
 
@@ -50,7 +52,7 @@
       padding-bottom: 1rem;
       background: $green-main;
       color: $white;
-      padding: .8rem  0  .8rem 1.2rem;
+      padding: .8rem  1.5rem  .8rem 1.5rem;
       margin: 2rem 0;
     }
 
