--- a/sass/05-content/_content-pets.scss
+++ b/sass/05-content/_content-pets.scss
@@ -5,15 +5,25 @@
 .node__pet-panel {
   display: grid;
   grid-template-columns: 10% 80% 10%;
-  grid-template-rows: repeat(2, auto) 0rem;
+  grid-template-rows: repeat(2, auto) auto;
   grid-row-gap: 2rem;
   grid-template-areas:
     "image image image"
     ". body ."
-    ". . .";
+    ". results .";
+
+    @include respond(desktop) {
+      grid-template-columns: 10rem minmax(20rem, 30rem) 1fr;
+      grid-template-rows: 4rem repeat(2, auto);
+      grid-template-areas: 
+        "image image ."
+        "image image body"
+        ". results results";
+    }
 
   &__image {
     grid-area: image;
+    overflow: hidden;
 
     img {
       display: block;
@@ -21,39 +31,78 @@
   }
 
   &__body {
-    margin-bottom: 2rem;
-
     grid-area: body;
     align-self: end;
 
+    @include respond(desktop) {
+      padding: 3rem;
+    }
+
     &-born-on {
-      
+      display: inline-block;      
     }
   }
 
   &-genealogy {
-    padding-bottom: 2rem;
-
-    a {
-      color: $black_gunmetal;
-      font-weight: 900;
-    }
+    
   }
 
   &__bcg {
     grid-column: 1 / -1;
     grid-row: 1 / -1;
+
+    @include respond(desktop) {
+      grid-column: 2 / -1;
+      grid-row: 2 / -1;
+    }
   }
 }
 
+.parent-wrapper {
+  margin-bottom: 2rem;
+
+  @include respond(big-desktop){
+    display: flex;
+  }
+
+}
+
+.parent {
+
+  @include respond(big-desktop) {
+    &:first-child {
+      margin-right: 3rem;
+    }
+  }  
+
+  &__label {
+    display: inline-block;
+    
+  }
+
+  &__mom,
+  &__dad {
+    display: inline-block;
+    font-weight: 700;
+  }
+}
 .showresults {
+  grid-area: results;
+
+  @include respond(desktop) {
+    text-align: center;
+    padding: 2rem 4rem;
+  }
 
   &__paragraph {
     padding-bottom: 2rem;
   }
   
   &__title {
-    text-align: center;
+    text: {
+      align: center;
+      transform: uppercase;
+    }
     padding-bottom: 2rem;
   }
 
