--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,7 +2,7 @@
 // @@ Font Awesome
 // ================================
 
-// @import "../bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.css";
+@import "../bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.css";
 
 // ================================
 // @@ ABSTRACTS
