--- a/sass/02-layout/_page_our-pets.scss
+++ b/sass/02-layout/_page_our-pets.scss
@@ -6,8 +6,12 @@
   &__container {
     margin: 6rem auto 8rem;
     min-height: 37vw;
-    max-width: 50vw;
+    max-width: 85vw;
     min-width: 70vw;
+
+    @include respond(tablet) {
+      max-width: 50vw;
+    }
   }
 }
 
