--- a/sass/01-base/_typography.scss
+++ b/sass/01-base/_typography.scss
@@ -4,7 +4,7 @@
 
 body {
   font-family: $font-family;
-  font-weight: 400;
+  font-weight: $tw-default;
   font-size: $base-font-size;
   color: $black_gunmetal;
   line-height: 2.5rem;
@@ -12,7 +12,7 @@ body {
 
 .heading {
   font-family: $font-family--heading;
-  font-weight: 900;
+  font-weight: $tw-bold;
 }
 
 .heading-first {
